# e3fp

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  MANIFEST.in  README.md  README.rst  environment.yml  pipeline.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  publish.yml
conformer/: generate.py  generator.py  protonation.py  util.py
crossvalidation/: run.py  sample.py  util.py
doc/: Makefile  environment.yml
doc/source/: conf.py  e3fp.fingerprint.metrics.rst  e3fp.rst  index.rst  install.rst  overview.rst  substitutions.rst
doc/source/_templates/: layout.html
doc/source/api/: e3fp.config.params.rst  e3fp.config.rst  e3fp.conformer.generate.rst  e3fp.conformer.generator.rst  e3fp.conformer.protonation.rst  e3fp.conformer.rst  e3fp.conformer.util.rst  e3fp.fingerprint.array_ops.rst  e3fp.fingerprint.db.rst  e3fp.fingerprint.fprint.rst  e3fp.fingerprint.fprinter.rst  e3fp.fingerprint.generate.rst  e3fp.fingerprint.metrics.array_metrics.rst  e3fp.fingerprint.metrics.fprint_metrics.rst  e3fp.fingerprint.metrics.rst  e3fp.fingerprint.rst  e3fp.fingerprint.structs.rst  e3fp.fingerprint.util.rst  e3fp.pipeline.rst  e3fp.rst  e3fp.util.rst  index.rst
doc/source/dev/: index.rst
doc/source/examples/data/: new_params.cfg  test_smiles.smi
doc/source/usage/: caffeine.smi  cli.rst  config.rst  index.rst  pipeline.rst
doc/source/usage/fingerprints/: comparison.rst  fprints.rst  index.rst  storage.rst
e3fp/: __init__.py  pipeline.py  util.py
e3fp/config/: defaults.cfg  params.py
e3fp/conformer/: generate.py  generator.py  protonation.py  util.py
e3fp/crossvalidation/: analysis.py  run.py  sample.py  util.py
e3fp/fingerprint/: array_ops.py  db.py  fprint.py  fprinter.py  generate.py  structs.py  util.py
e3fp/fingerprint/metrics/: __init__.py  _fast.c  _fast.pyx  array_metrics.py  fprint_metrics.py
e3fp/sea_utils/: library.py  run.py  util.py
e3fp/test/: test_config.py  test_conformer.py  test_dependencies.py  test_fingerprint.py  test_fingerprinting.py  test_fprint_db.py  test_metrics.py  test_struct.py  test_util.py
e3fp/test/data/rand_sdf_files/: CHEMBL116226.sdf.bz2  CHEMBL197946.sdf.bz2  CHEMBL2114064.sdf.bz2  CHEMBL501745.sdf.bz2
examples/: library_generation.py  parallel_fingerprinting.py  sea_searching.py
examples/data/: chembl17_e3fp_library.fit  params.cfg
fingerprint/: fprint.py  fprinter.py  generate.py
sea_utils/: library.py  run.py  util.py
src/e3fp/: __init__.py  pipeline.py  util.py
src/e3fp/config/: defaults.cfg  params.py
src/e3fp/conformer/: generate.py  generator.py
src/e3fp/fingerprint/: db.py  fprint.py  fprinter.py  generate.py  structs.py
src/e3fp/fingerprint/metrics/: array_metrics.py
src/e3fp/fingerprint/metrics/__pycache__/: array_metrics._dense_soergel-225.py312.1.nbc  array_metrics._dense_soergel-225.py312.nbi  array_metrics._sparse_soergel-246.py312.1.nbc  array_metrics._sparse_soergel-246.py312.nbi
tests/: test_conformer.py  test_dependencies.py  test_fingerprinting.py  test_util.py
tests/data/: caffeine_planar.sdf.bz2  ritalin_nonplanar.sdf  ritalin_nonplanar.sdf.bz2  stereo1.sdf.bz2  stereo2.sdf.bz2
tests/data/rand_sdf_files/: CHEMBL282186.sdf.bz2
